--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div id="header">
-            <h1>Today is Kise da Birthday🎉</h1>
+            <h1>Today is Per's Birthday🎉</h1>
             <img id="munda" src="https://arc-anglerfish-washpost-prod-washpost.s3.amazonaws.com/public/3XB5NMNQIJBXXC6UUFEFSR7G4I.jpg"/>
             <h2 id="bday-age">99 years old</h2>
             <h4 id="bday-date">01.01.1923</h4>
